--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,7 +6,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background: url('/images/liblib.jpg') center/cover no-repeat fixed;
+            background: url('/images/liblib2.webp') center/cover no-repeat fixed;
             position: relative;
         }
 
